--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -64,6 +64,46 @@
   note = {Accessed: 23 September 2024},
 }
 
+@Manual{httr,
+  title = {httr: Tools for Working with URLs and HTTP},
+  author = {Hadley Wickham},
+  year = {2024},
+  note = {R package version 1.4.7},
+  url = {https://CRAN.R-project.org/package=httr},
+}
+
+@Manual{readxl,
+  title = {readxl: Read Excel Files},
+  author = {Hadley Wickham and Jennifer Bryan},
+  year = {2024},
+  note = {R package version 1.4.3},
+  url = {https://CRAN.R-project.org/package=readxl},
+}
+
+@Manual{stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2024},
+  note = {R package version 1.5.0},
+  url = {https://CRAN.R-project.org/package=stringr},
+}
+
+@Manual{showtext,
+  title = {showtext: Using Fonts More Easily in R Graphs},
+  author = {Yixuan Qiu},
+  year = {2024},
+  note = {R package version 0.9-7},
+  url = {https://CRAN.R-project.org/package=showtext},
+}
+
+@Manual{patchwork,
+  title = {patchwork: The Composer of Plots},
+  author = {Thomas Lin Pedersen},
+  year = {2024},
+  note = {R package version 1.1.3},
+  url = {https://CRAN.R-project.org/package=patchwork},
+}
+
   
   
 
