--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -105,6 +105,45 @@
 }
 
   
-  
+@Article{Goel,
+  title = {Residential segregation and inequality: Considering barriers to choice in Toronto},
+  author = {Natasha Goel},
+  year = {2023},
+  journal = {Canadian Geographies},
+  volume = {67},
+  number = {3},
+  pages = {380-393},
+  doi = {10.1111/cag.12827},
+}
 
-  
+@Article{Quick,
+  title = {Exploring the global and local patterns of income segregation in Toronto, Canada: A multigroup modeling approach},
+  author = {Matthew Quick and Nick Revington},
+  year = {2021},
+  journal = {Sage Journals},
+  volume = {49},
+  number = {2},
+  pages = {637-653},
+  doi = {10.1177/23998083211021419},
+}
+
+@Misc{Jedwab,
+  title = {It pays to be bilingual in Canada: Though not everywhere},
+  author = {Jedwab, Jack},
+  year = {2003},
+  howpublished = {Association des études canadiennes},
+  note = {\url{https://example.com} (Accessed: September 26, 2024)},
+}
+
+
+@Article{AuthorLastName,
+  title = {Article Title},
+  author = {Author Name(s)},
+  year = {Year},
+  journal = {Journal Name},
+  volume = {Volume},
+  number = {Issue Number},
+  pages = {Page Range},
+  doi = {DOI},
+}
+
